# DragonSheep

./: .gitignore  README.md  todo
ds_control/: CMakeLists.txt  manifest.xml  readme
ds_control/cfg/: pdi_params.cfg
ds_control/docs/: pdi_paramsConfig-usage.dox  pdi_paramsConfig.dox  pdi_paramsConfig.wikidoc
ds_control/include/ds_control/: Ardrone_localizer.h  EKF.h  marker.h  pid_controller.h
ds_control/src/: Ardrone_localizer.cpp  EKF.cpp  main.cpp  marker.cpp  pid_controller.cpp
ds_gl/: mainpage.dox  manifest.xml
ds_hog/: CMakeLists.txt  mainpage.dox  manifest.xml
ds_hog/cfg/: hog_params.cfg
ds_hog/cfg/cpp/ds_hog/: HoG ParamsConfig.h  hog_paramsConfig.h
ds_hog/docs/: HoG ParamsConfig.dox  HoG ParamsConfig.wikidoc  hog_paramsConfig-usage.dox  hog_paramsConfig.dox  hog_paramsConfig.wikidoc
ds_hog/include/: qnode.hpp
ds_hog/src/: main.cpp  qnode.cpp
ds_hog/src/ds_hog/cfg/: HoG ParamsConfig.py  hog_paramsConfig.py
